--- a/static/css/widget.css
+++ b/static/css/widget.css
@@ -56,7 +56,7 @@
 	text-decoration: none;
 	padding-left: 65px;
 	display: block;
-	background: #555 url('/static/img/usv-logo-green-44x44.png') 10px 0 no-repeat;
+	background: #555;
 	font-weight: 100;
 	font-style: normal;
 	letter-spacing: 1.5px;
