--- a/templates/apply/confirmation.html
+++ b/templates/apply/confirmation.html
@@ -1,6 +1,6 @@
 {% extends '../base.html' %}
 
-{% block title %}Apply | {% end %}
+{% block title %}{{ settings.get('apply_title') }} | {% end %}
 
 {% block body_class %}jobs{% end %}
 
@@ -9,21 +9,21 @@
 	<div class="row">
 		<div class="col-sm-4">
 			<h1>
-				Apply
+				{{ settings.get('apply_title') }}
 			</h1>
-			<p class="text-muted" style="font-size: .9em; margin: 40px 40px 0 0">Note: if you use your browser's back button and re-submit the last page, the video you originally submitted will still be the one saved with your application.</p>
+			<p class="text-muted" style="font-size: .9em; margin: 40px 40px 0 0">Note: if you use your browser's back button and re-submit the last page, the video you originally submitted will still be the one saved with your submission.</p>
 		</div><!-- /.col -->
 		<div class="col-sm-8">
 			<div class="alert alert-success">
 				<b>Thanks!</b><br />
-				Your application is complete.
+				Your submission is complete.
 			</div>
 			<p>
-				We will begin reviewing applications shortly, and we will be in touch regarding next steps.
+				{{ settings.get('STRING_CONFIRMATION') }}
 			</p>	
 
 			<p><small>
-				We support workplace diversity and does not discriminate in employment matters on the basis of race, color, religion, gender, national origin, age, military service eligibility, veteran status, sexual orientation, marital status, disability, or any other protected class.
+				{{ settings.get('STRING_BOTTOM') }}
 			</small></p>
 		</div>
 	</div>
