--- a/templates/base.html
+++ b/templates/base.html
@@ -14,13 +14,11 @@
   <title>{% block title %}{% end %}{{ settings.get('site_title') }}</title>
   <meta name="description" content="{{ settings.get('site_description') }}" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="apple-touch-icon" sizes="57x57" href="{{ static_url("apple-touch-icon.png") }}" />
-  <link rel="shortcut icon" href="{{ static_url("themes/%s/img/favicon.png" % settings.get('active_theme')) }}" type="image/png" />
   <link rel="stylesheet" href="{{ static_url("css/bootstrap.min.css") }}" />
   <!-- dont cache style.css yes, since we're still developing on it heavily -->
   <link rel="stylesheet" href="{{ static_url("css/theconversation.css") }}" />  
   <!-- Theme files -->
-  <link rel="stylesheet" href="{{ static_url("themes/%s/%s.css" % (settings.get('active_theme'), settings.get('active_theme'))) }}" />
+  <link rel="stylesheet" href="{{ static_url("css/usv.css") }}" />
 
   <script src="{{ static_url("js/vendor/respond.min.js") }}"></script>
   <style type="text/css">
@@ -54,14 +52,13 @@
     <div id="mobile-header">
       <a id="menu-trigger" href="#">Open Menu</a>
       <a id="mobile-logo" href="/">{{ settings.get('site_title') }}</a>
-      <a id="submit-trigger" href="#submit-form">Submit Post</a>
     </div>
     <header id="site-header">
       <div class="container">
         <a id="logo" href="/">{{ settings.get('site_title') }}</a>
         <h1 id="usv-name"><a href="/">{{ settings.get('site_title') }}</a></h1>
         <ul id="main-nav">
-          <li id="nav-apply"><a href="/apply">Apply</a></li>
+          <li id="nav-apply"><a href="/apply">{{ settings.get('apply_title') }}</a></li>
         </ul>
       </div>
     </header>
