--- a/templates/base.html
+++ b/templates/base.html
@@ -82,8 +82,8 @@
   <script type="text/javascript" src="{{ static_url("js/support_functions.js") }}"></script>
   <script src="http://platform.twitter.com/widgets.js"  type="text/javascript"></script>
   <script type="text/javascript" src="{{ static_url("js/vendor/jquery.jscroll.min.js") }}"></script>
-  <link rel="stylesheet" href="//assets.ziggeo.com/css/ziggeo-betajs-player.min.css" />
-  <script src="//assets.ziggeo.com/js/ziggeo-json2-betajs-player.min.js"></script>
+  <link rel="stylesheet" href="//assets-cdn.ziggeo.com/v1-stable/ziggeo.css" />
+  <script src="//assets-cdn.ziggeo.com/v1-stable/ziggeo.js"></script>
   <script>ZiggeoApi.token = "{{ settings.get('ZIGGEO_TOKEN') }}";</script>
   <script type="text/javascript" src="//api.filepicker.io/v1/filepicker.js"></script>
   <script>filepicker.setKey("{{ settings.get('FILE_PICKER_KEY') }}");</script>
