--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@
   <script type="text/javascript" src="{{ static_url("js/vendor/jquery.scrollto.js") }}"></script>
   <script type="text/javascript" src="{{ static_url("js/jquery.qtip.min.js") }}"></script>
   <script type="text/javascript" src="{{ static_url("js/support_functions.js") }}"></script>
-  <script src="http://platform.twitter.com/widgets.js"  type="text/javascript"></script>
+  <script src="https://platform.twitter.com/widgets.js"  type="text/javascript"></script>
   <script type="text/javascript" src="{{ static_url("js/vendor/jquery.jscroll.min.js") }}"></script>
   <link rel="stylesheet" href="//assets-cdn.ziggeo.com/v1-stable/ziggeo.css" />
   <script src="//assets-cdn.ziggeo.com/v1-stable/ziggeo.js"></script>
