--- a/static/css/usv.css
+++ b/static/css/usv.css
@@ -5,11 +5,11 @@
 }
 
 #logo {
-	background:transparent url(/static/img/usv-logo-green-70x70.png?v=3) 0 0 no-repeat scroll;
+/*	background:transparent url(/static/img/usv-logo-green-70x70.png?v=3) 0 0 no-repeat scroll; */
 }
 
 #mobile-logo {
-	background:transparent url(/static/img/usv-logo-green-44x44.png?v=2) no-repeat center center;
+/*	background:transparent url(/static/img/usv-logo-green-44x44.png?v=2) no-repeat center center; */
 }
 
 .person, 
@@ -24,7 +24,8 @@ article.page .deck,
 
 @media only screen and (-webkit-min-device-pixel-ratio:1.3), only screen and (min--moz-device-pixel-ratio:1.3), only screen and (-o-min-device-pixel-ratio:1.3 / 1), only screen and (min-resolution:125dpi), only screen and (min-resolution:1.3dppx) {
 	#mobile-logo {
-		background:transparent url(/static/img/usv-logo-green-70x70.png?v=2) no-repeat center center;
+/*		background:transparent url(/static/img/usv-logo-green-70x70.png?v=2) no-repeat center center; */
+		background-color: transparent;
 		background-size:44px 44px;
 	}
 }
