--- a/templates/base.html
+++ b/templates/base.html
@@ -82,10 +82,15 @@
   <script type="text/javascript" src="{{ static_url("js/support_functions.js") }}"></script>
   <script src="https://platform.twitter.com/widgets.js"  type="text/javascript"></script>
   <script type="text/javascript" src="{{ static_url("js/vendor/jquery.jscroll.min.js") }}"></script>
-  <link rel="stylesheet" href="//assets-cdn.ziggeo.com/v1-stable/ziggeo.css" />
-  <script src="//assets-cdn.ziggeo.com/v1-stable/ziggeo.js"></script>
-  <script>ZiggeoApi.token = "{{ settings.get('ZIGGEO_TOKEN') }}";</script>
-  <script>ZiggeoApi.Config.webrtc = true;</script>
+  <link rel="stylesheet" href="//assets-cdn.ziggeo.com/v2-stable/ziggeo.css" />
+  <script src="//assets-cdn.ziggeo.com/v2-stable/ziggeo.js"></script>
+  <script>
+    var ziggeo_app = new ZiggeoApi.V2.Application({
+      token: "{{ settings.get('ZIGGEO_TOKEN') }}",
+      webrtc_streaming_if_necessary: true,
+      webrtc_on_mobile: true
+    });
+  </script>
   <script type="text/javascript" src="//api.filepicker.io/v1/filepicker.js"></script>
   <script>filepicker.setKey("{{ settings.get('FILE_PICKER_KEY') }}");</script>
   
